[package]
name = "h4oct-systems"
version = "0.1.0"
authors = ["ryo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tako = { package = "h4oct-tako", path = "../components/tako" }
commands = { package = "h4oct-commands", path = "../components/commands" }